# CCompiler

./: .gitignore  AstProxy.cxx  AstProxy.hpp  CMakeLists.txt  gen_grammar.sh  main.cxx  todo
asm/: asm_context.cxx  asm_context.hpp  asm_generator.cxx  asm_generator.hpp  asm_scope.cxx  asm_scope.hpp  asm_variable.cxx  asm_variable.hpp
grammar/: lexer.cxx  parser.cxx  parser.hxx
grammar/myc/: lexer.l  parser.y
myclib/: myc_init.asm  myc_init.inc  myc_print.asm  myc_print.inc
preprocessor/: PreprocessFile.cxx  PreprocessFile.hpp  PreprocessedSlice.cxx  PreprocessedSlice.hpp  Preprocessor.cxx  Preprocessor.hpp  PreprocessorDefine.cxx  PreprocessorDefine.hpp
tests/comments/: comments.c
tests/compiler/if_else/: Makefile  main.c
tree_syntax/: tree_syntax.cxx  tree_syntax.hpp  tree_syntax_helper.cxx  tree_syntax_helper.hpp
utils/: CommentsCleaner.cxx  CommentsCleaner.hpp  FSettings.cxx  FSettings.hpp  FSingleton.hpp  FilesResolver.cxx  FilesResolver.hpp
